--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -5,54 +5,57 @@
 
 
 	"comment": "BLOCKS",
-	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
-	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
-	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
-	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
-	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
-	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
-	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
-	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
-	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
-	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
-	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
-	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
-	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
-	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
-	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
-	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
+	"block.mubble.oak_vertical_slab": "Dalle verticale en chêne",
+	"block.mubble.spruce_vertical_slab": "Dalle verticale en sapin",
+	"block.mubble.birch_vertical_slab": "Dalle verticale en bouleau",
+	"block.mubble.jungle_vertical_slab": "Dalle verticale en acajou",
+	"block.mubble.acacia_vertical_slab": "Dalle verticale en acacia",
+	"block.mubble.dark_oak_vertical_slab": "Dalle verticale en chêne noir",
+	"block.mubble.stone_vertical_slab": "Dalle verticale en pierre",
+	"block.mubble.sandstone_vertical_slab": "Dalle verticale en grès",
+	"block.mubble.cobblestone_vertical_slab": "Dalle verticale de pierres",
+	"block.mubble.brick_vertical_slab": "Dalle verticale en briques",
+	"block.mubble.stone_brick_vertical_slab": "Dalle verticale en pierre taillée",
+	"block.mubble.nether_brick_vertical_slab": "Dalle verticale en briques du Nether",
+	"block.mubble.quartz_vertical_slab": "Dalle verticale de quartz",
+	"block.mubble.red_sandstone_vertical_slab": "Dalle verticale en grès rouge",
+	"block.mubble.purpur_vertical_slab": "Dalle verticale en purpur",
+	"block.mubble.prismarine_vertical_slab": "Dalle verticale de prismarine",
+	"block.mubble.prismarine_brick_vertical_slab": "Dalle verticale de prismarine taillée",
+	"block.mubble.dark_prismarine_vertical_slab": "Dalle verticale de prismarine sombre",
 
-	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
-	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
-	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
-	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
-	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
-	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+	"block.mubble.oak_leaves_carpet": "Tapis de feuilles de chêne",
+	"block.mubble.spruce_leaves_carpet": "Tapis de feuilles de sapin",
+	"block.mubble.birch_leaves_carpet": "Tapis de feuilles de bouleau",
+	"block.mubble.jungle_leaves_carpet": "Tapis de feuilles de acajou",
+	"block.mubble.acacia_leaves_carpet": "Tapis de feuilles de acacia",
+	"block.mubble.dark_oak_leaves_carpet": "Tapis de feuilles de chêne noir",
 	
 	"block.mubble.vanadium_block": "Bloc de vanadium",
 	"block.mubble.vanadium_ore": "Minerai de vanadium",
-	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
-	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
-	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
-	"//block.mubble.cherry_oak_sapling": "Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
-	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
-	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
-	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
-	"//block.mubble.cherry_oak_leaves": "Cherry Oak Leaves",
-	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
-	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
-	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
-	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
-	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
-	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
-	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
-	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
-	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
+	"block.mubble.autumn_oak_sapling": "Pousse de chêne d'automne",
+	"block.mubble.autumn_oak_leaves": "Feuilles de chêne d'automne",
+	"block.mubble.autumn_oak_leaves_carpet": "Tapis de feuilles de chêne d'automne",
+	"block.mubble.cherry_oak_planks": "Planches de cerisier",
+	"block.mubble.pink_cherry_oak_sapling": "Pousse de cerisier rose",
+	"block.mubble.white_cherry_oak_sapling": "Pousse de cerisier blanc",
+	"block.mubble.cherry_oak_log": "Bûche de cerisier",
+	"block.mubble.stripped_cherry_oak_log": "Bûche de cerisier écorcée",
+	"block.mubble.cherry_oak_wood": "Bois de cerisier",
+	"block.mubble.stripped_cherry_oak_wood": "Bois de cerisier écorcé",
+	"block.mubble.pink_cherry_oak_leaves": "Feuilles de cerisier rose",
+	"block.mubble.pink_cherry_oak_leaves_carpet": "Tapis de feuilles de cerisier rose",
+	"block.mubble.white_cherry_oak_leaves": "Feuilles de cerisier blanc",
+	"block.mubble.white_cherry_oak_leaves_carpet": "Tapis de feuilles de cerisier blanc",
+	"block.mubble.cherry_oak_pressure_plate": "Plaque de pression en cerisier",
+	"block.mubble.cherry_oak_trapdoor": "Trappe en cerisier",
+	"block.mubble.cherry_oak_button": "Bouton en cerisier",
+	"block.mubble.cherry_oak_stairs": "Escaliers en cerisier",
+	"block.mubble.cherry_oak_slab": "Dalle en cerisier",
+	"block.mubble.cherry_oak_vertical_slab": "Dalle verticale en cerisier",
+	"block.mubble.cherry_oak_fence_gate": "Portillon en cerisier",
+	"block.mubble.cherry_oak_fence": "Barrière en cerisier",
+	"block.mubble.cherry_oak_door": "Porte en cerisier",
 	"//block.mubble.palm_planks": "Palm Planks",
 	"//block.mubble.palm_sapling": "Palm Sapling",
 	"//block.mubble.palm_log": "Palm Log",
@@ -88,22 +91,22 @@
 	"block.mubble.gray_bricks": "Briques grises",
 	"block.mubble.black_bricks": "Briques noires",
 
-	"block.mubble.blue_brick_stairs": "Ecaliers en brique bleue",
-	"block.mubble.light_blue_brick_stairs": "Ecaliers en brique bleu clair",
-	"block.mubble.cyan_brick_stairs": "Ecaliers en brique cyan",
-	"block.mubble.green_brick_stairs": "Ecaliers en brique verte",
-	"block.mubble.lime_brick_stairs": "Ecaliers en brique vert clair",
-	"block.mubble.yellow_brick_stairs": "Ecaliers en brique jaune",
-	"block.mubble.orange_brick_stairs": "Ecaliers en brique orange",
-	"block.mubble.red_brick_stairs": "Ecaliers en brique rouge",
-	"block.mubble.pink_brick_stairs": "Ecaliers en brique rose",
-	"block.mubble.magenta_brick_stairs": "Ecaliers en brique magenta",
-	"block.mubble.purple_brick_stairs": "Ecaliers en brique violette",
-	"block.mubble.brown_brick_stairs": "Ecaliers en brique marron",
-	"block.mubble.white_brick_stairs": "Ecaliers en brique blanche",
-	"block.mubble.light_gray_brick_stairs": "Ecaliers en brique gris clair",
-	"block.mubble.gray_brick_stairs": "Ecaliers en brique grise",
-	"block.mubble.black_brick_stairs": "Ecaliers en brique noire",
+	"block.mubble.blue_brick_stairs": "Escaliers en brique bleue",
+	"block.mubble.light_blue_brick_stairs": "Escaliers en brique bleu clair",
+	"block.mubble.cyan_brick_stairs": "Escaliers en brique cyan",
+	"block.mubble.green_brick_stairs": "Escaliers en brique verte",
+	"block.mubble.lime_brick_stairs": "Escaliers en brique vert clair",
+	"block.mubble.yellow_brick_stairs": "Escaliers en brique jaune",
+	"block.mubble.orange_brick_stairs": "Escaliers en brique orange",
+	"block.mubble.red_brick_stairs": "Escaliers en brique rouge",
+	"block.mubble.pink_brick_stairs": "Escaliers en brique rose",
+	"block.mubble.magenta_brick_stairs": "Escaliers en brique magenta",
+	"block.mubble.purple_brick_stairs": "Escaliers en brique violette",
+	"block.mubble.brown_brick_stairs": "Escaliers en brique marron",
+	"block.mubble.white_brick_stairs": "Escaliers en brique blanche",
+	"block.mubble.light_gray_brick_stairs": "Escaliers en brique gris clair",
+	"block.mubble.gray_brick_stairs": "Escaliers en brique grise",
+	"block.mubble.black_brick_stairs": "Escaliers en brique noire",
 
 	"block.mubble.blue_brick_slab": "Dalle en brique bleue",
 	"block.mubble.light_blue_brick_slab": "Dalle en brique bleu clair",
@@ -192,22 +195,22 @@
 	"block.mubble.gray_dark_prismarine": "Prismarine sombre grise",
 	"block.mubble.black_dark_prismarine": "Prismarine sombre noire",
 
-	"block.mubble.blue_dark_prismarine_stairs": "Ecaliers en prismarine sombre bleue",
-	"block.mubble.light_blue_dark_prismarine_stairs": "Ecaliers en prismarine sombre bleu clair",
-	"block.mubble.cyan_dark_prismarine_stairs": "Ecaliers en prismarine sombre cyan",
-	"block.mubble.green_dark_prismarine_stairs": "Ecaliers en prismarine sombre verte",
-	"block.mubble.lime_dark_prismarine_stairs": "Ecaliers en prismarine sombre vert clair",
-	"block.mubble.yellow_dark_prismarine_stairs": "Ecaliers en prismarine sombre jaune",
-	"block.mubble.orange_dark_prismarine_stairs": "Ecaliers en prismarine sombre orange",
-	"block.mubble.red_dark_prismarine_stairs": "Ecaliers en prismarine sombre rouge",
-	"block.mubble.pink_dark_prismarine_stairs": "Ecaliers en prismarine sombre rose",
-	"block.mubble.magenta_dark_prismarine_stairs": "Ecaliers en prismarine sombre magenta",
-	"block.mubble.purple_dark_prismarine_stairs": "Ecaliers en prismarine sombre violette",
-	"block.mubble.brown_dark_prismarine_stairs": "Ecaliers en prismarine sombre marron",
-	"block.mubble.white_dark_prismarine_stairs": "Ecaliers en prismarine sombre blanche",
-	"block.mubble.light_gray_dark_prismarine_stairs": "Ecaliers en prismarine sombre gris clair",
-	"block.mubble.gray_dark_prismarine_stairs": "Ecaliers en prismarine sombre grise",
-	"block.mubble.black_dark_prismarine_stairs": "Ecaliers en prismarine sombre noire",
+	"block.mubble.blue_dark_prismarine_stairs": "Escaliers en prismarine sombre bleue",
+	"block.mubble.light_blue_dark_prismarine_stairs": "Escaliers en prismarine sombre bleu clair",
+	"block.mubble.cyan_dark_prismarine_stairs": "Escaliers en prismarine sombre cyan",
+	"block.mubble.green_dark_prismarine_stairs": "Escaliers en prismarine sombre verte",
+	"block.mubble.lime_dark_prismarine_stairs": "Escaliers en prismarine sombre vert clair",
+	"block.mubble.yellow_dark_prismarine_stairs": "Escaliers en prismarine sombre jaune",
+	"block.mubble.orange_dark_prismarine_stairs": "Escaliers en prismarine sombre orange",
+	"block.mubble.red_dark_prismarine_stairs": "Escaliers en prismarine sombre rouge",
+	"block.mubble.pink_dark_prismarine_stairs": "Escaliers en prismarine sombre rose",
+	"block.mubble.magenta_dark_prismarine_stairs": "Escaliers en prismarine sombre magenta",
+	"block.mubble.purple_dark_prismarine_stairs": "Escaliers en prismarine sombre violette",
+	"block.mubble.brown_dark_prismarine_stairs": "Escaliers en prismarine sombre marron",
+	"block.mubble.white_dark_prismarine_stairs": "Escaliers en prismarine sombre blanche",
+	"block.mubble.light_gray_dark_prismarine_stairs": "Escaliers en prismarine sombre gris clair",
+	"block.mubble.gray_dark_prismarine_stairs": "Escaliers en prismarine sombre grise",
+	"block.mubble.black_dark_prismarine_stairs": "Escaliers en prismarine sombre noire",
 
 	"block.mubble.blue_dark_prismarine_slab": "Dalle en prismarine sombre bleue",
 	"block.mubble.light_blue_dark_prismarine_slab": "Dalle en prismarine sombre bleu clair",
@@ -451,7 +454,8 @@
 
 
 	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
-	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
+	"//block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
+	"//block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
 	"//block.mubble.potted_palm_sapling": "Potted Palm Sapling",
 	"//block.mubble.potted_fire_flower": "Potted Fire Flower",
 	"//block.mubble.potted_ice_flower": "Potted Ice Flower",
@@ -570,8 +574,8 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"item.mubble.toad_spawn_egg":"Oeuf d'apparition de Toad",
-	"item.mubble.chincho_spawn_egg":"Oeuf d'apparition de Chincho",
+	"item.mubble.toad_spawn_egg": "Oeuf d'apparition de Toad",
+	"item.mubble.chincho_spawn_egg": "Oeuf d'apparition de Chincho",
 
 
 
@@ -631,7 +635,8 @@
 
 	"comment": "BIOMES",
 	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
-	"//biome.mubble.cherry_oak_forest": "Cherry Oak Forest",
+	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
+	"//biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
 	"//biome.mubble.scarlet_forest": "Scarlet Forest",
 
 
