--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -37,7 +37,8 @@
 	"block.mubble.autumn_oak_leaves": "Folhas de Carvalho de Outono",
 	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
 	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
-	"block.mubble.cherry_oak_sapling": "Muda de Carvalho Cereja",
+	"//block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
+	"//block.mubble.white_cherry_oak_sapling": "White Cherry Oak Sapling",
 	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
 	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
 	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
@@ -451,7 +452,8 @@
 
 
 	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
-	"//block.mubble.potted_cherry_oak_sapling": "Potted Cherry Oak Sapling",
+	"//block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
+	"//block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Vaso de Muda de Palmeira",
 	"block.mubble.potted_fire_flower": "Vaso de Flor de Fogo",
 	"block.mubble.potted_ice_flower": "Vaso de Flor de Gelo",
@@ -570,8 +572,8 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"item.mubble.toad_spawn_egg":"Ovo de Gerar Toad",
-	"item.mubble.chincho_spawn_egg":"Ovo de Gerar Chincho",
+	"item.mubble.toad_spawn_egg": "Ovo de Gerar Toad",
+	"item.mubble.chincho_spawn_egg": "Ovo de Gerar Chincho",
 
 
 
@@ -631,7 +633,8 @@
 
 	"comment": "BIOMES",
 	"biome.mubble.autumn_oak_forest": "Floresta de Carvalho de Outono",
-	"biome.mubble.cherry_oak_forest": "Floresta de Carvalho Cereja",
+	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
+	"//biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
 	"biome.mubble.scarlet_forest": "Floresta de Escarlate",
 
 
