--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -56,23 +56,23 @@
 	"block.mubble.cherry_oak_fence_gate": "Portillon en cerisier",
 	"block.mubble.cherry_oak_fence": "Barrière en cerisier",
 	"block.mubble.cherry_oak_door": "Porte en cerisier",
-	"//block.mubble.palm_planks": "Palm Planks",
-	"//block.mubble.palm_sapling": "Palm Sapling",
-	"//block.mubble.palm_log": "Palm Log",
-	"//block.mubble.stripped_palm_log": "Stripped Palm Log",
-	"//block.mubble.palm_wood": "Palm Wood",
-	"//block.mubble.stripped_palm_wood": "Stripped Palm Wood",
-	"//block.mubble.palm_leaves": "Palm Leaves",
-	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
-	"//block.mubble.palm_pressure_plate": "Palm Pressure Plate",
-	"//block.mubble.palm_trapdoor": "Palm Trapdoor",
-	"//block.mubble.palm_button": "Palm Button",
-	"//block.mubble.palm_stairs": "Palm Stairs",
-	"//block.mubble.palm_slab": "Palm Slab",
-	"//block.mubble.palm_vertical_slab": "Palm Vertical Slab",
-	"//block.mubble.palm_fence_gate": "Palm Fence Gate",
-	"//block.mubble.palm_fence": "Palm Fence",
-	"//block.mubble.palm_door": "Palm Door",
+	"block.mubble.palm_oak_planks": "Planches de palmier",
+	"block.mubble.palm_oak_sapling": "Pousse de palmier",
+	"block.mubble.palm_oak_log": "Bûche de palmier",
+	"block.mubble.stripped_palm_oak_log": "Bûche de palmier écorcée",
+	"block.mubble.palm_oak_wood": "Bois de palmier",
+	"block.mubble.stripped_palm_oak_wood": "Bois de palmier écorcé",
+	"block.mubble.palm_oak_leaves": "Feuilles de palmier",
+	"block.mubble.palm_oak_leaves_carpet": "Tapis de feuilles de palmier",
+	"block.mubble.palm_oak_pressure_plate": "Plaque de pression en palmier",
+	"block.mubble.palm_oak_trapdoor": "Trappe en palmier",
+	"block.mubble.palm_oak_button": "Bouton en palmier",
+	"block.mubble.palm_oak_stairs": "Escaliers en palmier",
+	"block.mubble.palm_oak_slab": "Dalle en palmier",
+	"block.mubble.palm_oak_vertical_slab": "Dalle verticale en palmier",
+	"block.mubble.palm_oak_fence_gate": "Portillon en palmier",
+	"block.mubble.palm_oak_fence": "Barrière en palmier",
+	"block.mubble.palm_oak_door": "Porte en palmier",
 
 	"block.mubble.blue_bricks": "Briques bleues",
 	"block.mubble.light_blue_bricks": "Briques bleu clairs",
@@ -399,23 +399,23 @@
 	"block.mubble.spring": "Ressort",
 
 
-	"//block.mubble.scarlet_planks": "Scarlet Planks",
-	"//block.mubble.scarlet_sapling": "Scarlet Sapling",
-	"//block.mubble.scarlet_log": "Scarlet Log",
-	"//block.mubble.stripped_scarlet_log": "Stripped Scarlet Log",
-	"//block.mubble.scarlet_wood": "Scarlet Wood",
-	"//block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
-	"//block.mubble.scarlet_leaves": "Scarlet Leaves",
-	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
-	"//block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
-	"//block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
-	"//block.mubble.scarlet_button": "Scarlet Button",
-	"//block.mubble.scarlet_stairs": "Scarlet Stairs",
-	"//block.mubble.scarlet_slab": "Scarlet Slab",
-	"//block.mubble.scarlet_vertical_slab": "Scarlet Vertical Slab",
-	"//block.mubble.scarlet_fence_gate": "Scarlet Fence Gate",
-	"//block.mubble.scarlet_fence": "Scarlet Fence",
-	"//block.mubble.scarlet_door": "Scarlet Door",
+	"block.mubble.scarlet_planks": "Planches écarlate",
+	"block.mubble.scarlet_sapling": "Pousse écarlate",
+	"block.mubble.scarlet_log": "Bûche écarlate",
+	"block.mubble.stripped_scarlet_log": "Bûche écarlate écorcée",
+	"block.mubble.scarlet_wood": "Bois écarlate",
+	"block.mubble.stripped_scarlet_wood": "Bois écarlate écorcé",
+	"block.mubble.scarlet_leaves": "Feuilles écarlates",
+	"block.mubble.scarlet_leaves_carpet": "Tapis de feuilles écarlate",
+	"block.mubble.scarlet_pressure_plate": "Plaque de pression écarlate",
+	"block.mubble.scarlet_trapdoor": "Trappe écarlate",
+	"block.mubble.scarlet_button": "Bouton écarlate",
+	"block.mubble.scarlet_stairs": "Escaliers écarlate",
+	"block.mubble.scarlet_slab": "Dalle écarlate",
+	"block.mubble.scarlet_vertical_slab": "Dalle verticale écarlate",
+	"block.mubble.scarlet_fence_gate": "Portillon écarlate",
+	"block.mubble.scarlet_fence": "Barrière écarlate",
+	"block.mubble.scarlet_door": "Porte écarlate",
 	"block.mubble.scarlet_mushroom": "Champignon écarlate",
 	"block.mubble.scarlet_orchid": "Orchidée écarlate",
 
@@ -591,14 +591,14 @@
 	"item.mubble.vanish_cap": "Casquette de disparition",
 	"item.mubble.wing_cap": "Casquette ailée",
 	"item.mubble.gooigi_cap": "Casquette de Gooigi",
-	"//item.mubble.gold_mario_cap": "Gold Mario Cap",
-	"//item.mubble.silver_luigi_cap": "Silver Luigi Cap",
+	"item.mubble.gold_mario_cap": "Casquette de Mario doré",
+	"item.mubble.silver_luigi_cap": "Casquette de Luigi argenté",
 	"item.mubble.princess_peach_crown": "Couronne de la Princesse Peach",
 	"item.mubble.princess_daisy_crown": "Couronne de la Princesse Daisy",
 	"item.mubble.rosalina_crown": "Couronne d'Harmonie",
 	"item.mubble.pink_gold_peach_crown": "Couronne de Peach d'or rose",
 	"item.mubble.super_crown": "Super couronne",
-	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"item.mubble.mario_wedding_hat": "Chapeau de mariage de Mario",
 	"item.mubble.broque_monsieur_head": "Tête de Charlie Bloc",
 
 
@@ -634,10 +634,10 @@
 
 
 	"comment": "BIOMES",
-	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
-	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
-	"//biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
-	"//biome.mubble.scarlet_forest": "Scarlet Forest",
+	"biome.mubble.autumn_oak_forest": "Forêt de chênes d'automne",
+	"biome.mubble.pink_cherry_oak_forest": "Forêt de cerisiers roses",
+	"biome.mubble.white_cherry_oak_forest": "Forêt de cerisiers blancs",
+	"biome.mubble.scarlet_forest": "Forêt écarlate",
 
 
 
