--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -24,36 +24,36 @@
 	"block.mubble.prismarine_brick_vertical_slab": "Laje Vertical de Tijolo de Prismarina",
 	"block.mubble.dark_prismarine_vertical_slab": "Laje Vertical de Prismarina Escura",
 
-	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
-	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
-	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
-	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
-	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
-	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+	"block.mubble.oak_leaves_carpet": "Tapete de Folhas de Carvalho",
+	"block.mubble.spruce_leaves_carpet": "Tapete de Folhas de Pinheiro",
+	"block.mubble.birch_leaves_carpet": "Tapete de Folhas de Eucalipto",
+	"block.mubble.jungle_leaves_carpet": "Tapete de Folhas de Selva",
+	"block.mubble.acacia_leaves_carpet": "Tapete de Folhas de Acácia",
+	"block.mubble.dark_oak_leaves_carpet": "Tapete de Folhas de Carvalho Escuro",
 
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
 	"block.mubble.autumn_oak_sapling": "Muda de Carvalho de Outono",
 	"block.mubble.autumn_oak_leaves": "Folhas de Carvalho de Outono",
-	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
-	"//block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
-	"//block.mubble.white_cherry_oak_sapling": "White Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
-	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
-	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
-	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
+	"block.mubble.autumn_oak_leaves_carpet": "Tapete de Folhas de Carvalho de Outono",
+	"block.mubble.cherry_oak_planks": "Tábuas de Carvalho Cereja",
+	"block.mubble.pink_cherry_oak_sapling": "Muda de Carvalho Cereja Rosa",
+	"block.mubble.white_cherry_oak_sapling": "Muda de Carvalho Cereja Branca",
+	"block.mubble.cherry_oak_log": "Carvalho Cereja",
+	"block.mubble.stripped_cherry_oak_log": "Carvalho Cereja Descascado",
+	"block.mubble.cherry_oak_wood": "Madeira de Carvalho Cereja",
+	"block.mubble.stripped_cherry_oak_wood": "Madeira de Carvalho Cereja Descascada",
 	"block.mubble.cherry_oak_leaves": "Folhas de Carvalho Cereja",
-	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
-	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
-	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
-	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
-	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
-	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
-	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
-	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
-	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
+	"block.mubble.cherry_oak_leaves_carpet": "Tapete de Folhas de Carvalho Cereja",
+	"block.mubble.cherry_oak_pressure_plate": "Placa de Pressão de Carvalho Cereja",
+	"block.mubble.cherry_oak_trapdoor": "Alçapão de Carvalho Cereja",
+	"block.mubble.cherry_oak_button": "Botão de Carvalho Cereja",
+	"block.mubble.cherry_oak_stairs": "Escadas de Carvalho Cereja",
+	"block.mubble.cherry_oak_slab": "Laje de Carvalho Cereja",
+	"block.mubble.cherry_oak_vertical_slab": "Laje Vertical de Carvalho Cereja",
+	"block.mubble.cherry_oak_fence_gate": "Portão de Carvalho Cereja",
+	"block.mubble.cherry_oak_fence": "Cerca de Carvalho Cereja",
+	"block.mubble.cherry_oak_door": "Porta de Carvalho Cereja",
 	"block.mubble.palm_planks": "Tábua de Palmeira",
 	"block.mubble.palm_sapling": "Muda de Palmeira",
 	"block.mubble.palm_log": "Palmeira",
@@ -61,7 +61,7 @@
 	"block.mubble.palm_wood": "Madeira de Palmeira",
 	"block.mubble.stripped_palm_wood": "Madeira de Palmeira Descascada",
 	"block.mubble.palm_leaves": "Folhas de Palmeira",
-	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
+	"block.mubble.palm_leaves_carpet": "Tapete de Folhas de Palmeira",
 	"block.mubble.palm_pressure_plate": "Placa de Pressão de Palmeira",
 	"block.mubble.palm_trapdoor": "Alçapão de Palmeira",
 	"block.mubble.palm_button": "Botão de Palmeira",
@@ -451,9 +451,9 @@
 	"block.mubble.potato_flower": "Flor de Batata",
 
 
-	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
-	"//block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
-	"//block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
+	"block.mubble.potted_autumn_oak_sapling": "Vaso de Muda de Carvalho de Outono",
+	"block.mubble.potted_pink_cherry_oak_sapling": "Vaso de Muda de Carvalho Cereja Rosa",
+	"block.mubble.potted_white_cherry_oak_sapling": "Vaso de Muda de Carvalho Cereja Branca",
 	"block.mubble.potted_palm_sapling": "Vaso de Muda de Palmeira",
 	"block.mubble.potted_fire_flower": "Vaso de Flor de Fogo",
 	"block.mubble.potted_ice_flower": "Vaso de Flor de Gelo",
@@ -633,8 +633,8 @@
 
 	"comment": "BIOMES",
 	"biome.mubble.autumn_oak_forest": "Floresta de Carvalho de Outono",
-	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
-	"//biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
+	"biome.mubble.pink_cherry_oak_forest": "Floresta de Carvalho Cereja Rosa",
+	"biome.mubble.white_cherry_oak_forest": "Floresta de Carvalho Cereja Branca",
 	"biome.mubble.scarlet_forest": "Floresta de Escarlate",
 
 
