--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,6 +1,6 @@
 {
 	"comment": "CREATIVE TABS",
-	"itemGroup.costumes": "Kostums",
+	"itemGroup.costumes": "Kostuums",
 
 
 
@@ -10,7 +10,7 @@
 	"block.mubble.birch_vertical_slab": "Berkenhouten verticale plaat",
 	"block.mubble.jungle_vertical_slab": "Oerwoudhouten verticale plaat",
 	"block.mubble.acacia_vertical_slab": "Acaciahouten verticale plaat",
-	"block.mubble.dark_oak_vertical_slab": "Donkereeikenhouten verticale plaat",
+	"block.mubble.dark_oak_vertical_slab": "Donkereikenhouten verticale plaat",
 	"block.mubble.stone_vertical_slab": "Steenen verticale plaat",
 	"block.mubble.sandstone_vertical_slab": "Zandsteenen verticale plaat",
 	"block.mubble.cobblestone_vertical_slab": "Kiezelstenen verticale plaat",
@@ -24,47 +24,47 @@
 	"block.mubble.prismarine_brick_vertical_slab": "Prismarienblokstenen verticale plaat",
 	"block.mubble.dark_prismarine_vertical_slab": "Donkereprismarien verticale plaat",
 
-	"//block.mubble.oak_leaves_carpet": "Oak Leaves Carpet",
-	"//block.mubble.spruce_leaves_carpet": "Spruce Leaves Carpet",
-	"//block.mubble.birch_leaves_carpet": "Birch Leaves Carpet",
-	"//block.mubble.jungle_leaves_carpet": "Jungle Leaves Carpet",
-	"//block.mubble.acacia_leaves_carpet": "Acacia Leaves Carpet",
-	"//block.mubble.dark_oak_leaves_carpet": "Dark Oak Leaves Carpet",
+	"block.mubble.oak_leaves_carpet": "Eikenbladeren tapijt",
+	"block.mubble.spruce_leaves_carpet": "Sparrennaalden tapijt",
+	"block.mubble.birch_leaves_carpet": "Berkenbladeren tapijt",
+	"block.mubble.jungle_leaves_carpet": "Oerwoudbladeren tapijt",
+	"block.mubble.acacia_leaves_carpet": "Acaciabladeren tapijt",
+	"block.mubble.dark_oak_leaves_carpet": "Donkereikenbladeren tapijt",
 	
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
 	"block.mubble.autumn_oak_sapling": "Herfsteikkiemplant",
 	"block.mubble.autumn_oak_leaves": "Herfsteikbladeren",
-	"//block.mubble.autumn_oak_leaves_carpet": "Autumn Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
-	"//block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
-	"//block.mubble.white_cherry_oak_sapling": "White Cherry Oak Sapling",
-	"//block.mubble.cherry_oak_log": "Cherry Oak Log",
-	"//block.mubble.stripped_cherry_oak_log": "Stripped Cherry Oak Log",
-	"//block.mubble.cherry_oak_wood": "Cherry Oak Wood",
-	"//block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
-	"//block.mubble.pink_cherry_oak_leaves": "Pink Cherry Oak Leaves",
-	"//block.mubble.pink_cherry_oak_leaves_carpet": "Pink Cherry Oak Leaves Carpet",
-	"//block.mubble.white_cherry_oak_leaves": "White Cherry Oak Leaves",
-	"//block.mubble.white_cherry_oak_leaves_carpet": "White Cherry Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_leaves_carpet": "Cherry Oak Leaves Carpet",
-	"//block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
-	"//block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
-	"//block.mubble.cherry_oak_button": "Cherry Oak Button",
-	"//block.mubble.cherry_oak_stairs": "Cherry Oak Stairs",
-	"//block.mubble.cherry_oak_slab": "Cherry Oak Slab",
-	"//block.mubble.cherry_oak_vertical_slab": "Cherry Oak Vertical Slab",
-	"//block.mubble.cherry_oak_fence_gate": "Cherry Oak Fence Gate",
-	"//block.mubble.cherry_oak_fence": "Cherry Oak Fence",
-	"//block.mubble.cherry_oak_door": "Cherry Oak Door",
+	"block.mubble.autumn_oak_leaves_carpet": "Herfsteikbladeren tapijt",
+	"block.mubble.cherry_oak_planks": "Kerseneikhouten planken",
+	"block.mubble.pink_cherry_oak_sapling": "Rozekerseneikkiemplant",
+	"block.mubble.white_cherry_oak_sapling": "Wittekerseneikkiemplant",
+	"block.mubble.cherry_oak_log": "Kerseneikstam",
+	"block.mubble.stripped_cherry_oak_log": "Gestripte kerseneikstam",
+	"block.mubble.cherry_oak_wood": "Kerseneikenhout",
+	"block.mubble.stripped_cherry_oak_wood": "Gestript kerseneikenhout",
+	"block.mubble.pink_cherry_oak_leaves": "Rozekerseneikbladeren",
+	"block.mubble.pink_cherry_oak_leaves_carpet": "Rozekerseneikbladeren tapijt",
+	"block.mubble.white_cherry_oak_leaves": "Wittekerseneikbladeren",
+	"block.mubble.white_cherry_oak_leaves_carpet": "Wittekerseneikbladeren tapijt",
+	"block.mubble.cherry_oak_leaves_carpet": "Kerseneikbladeren tapijt",
+	"block.mubble.cherry_oak_pressure_plate": "Kerseneikhouten drukplaat",
+	"block.mubble.cherry_oak_trapdoor": "Kerseneikhouten valluik",
+	"block.mubble.cherry_oak_button": "Kerseneikhouten knop",
+	"block.mubble.cherry_oak_stairs": "Kerseneikhouten trap",
+	"block.mubble.cherry_oak_slab": "Kerseneikhouten plaat",
+	"block.mubble.cherry_oak_vertical_slab": "Kerseneikhouten verticale plaat",
+	"block.mubble.cherry_oak_fence_gate": "Kerseneikhouten poort",
+	"block.mubble.cherry_oak_fence": "Kerseneikhouten hek",
+	"block.mubble.cherry_oak_door": "Kerseneikhouten deur",
 	"block.mubble.palm_planks": "Palmhouten planken",
 	"block.mubble.palm_sapling": "Palmkiemplant",
 	"block.mubble.palm_log": "Palmstam",
 	"block.mubble.stripped_palm_log": "Gestripte palmstam",
 	"block.mubble.palm_wood": "Palmhout",
-	"block.mubble.stripped_palm_wood": "Gestripte palmhout",
+	"block.mubble.stripped_palm_wood": "Gestript palmhout",
 	"block.mubble.palm_leaves": "Palmbladeren",
-	"//block.mubble.palm_leaves_carpet": "Palm Leaves Carpet",
+	"block.mubble.palm_leaves_carpet": "Palmbladeren tapijt",
 	"block.mubble.palm_pressure_plate": "Palmhouten drukplaat",
 	"block.mubble.palm_trapdoor": "Palmhouten valluik",
 	"block.mubble.palm_button": "Palmhouten knop",
@@ -405,9 +405,9 @@
 	"block.mubble.scarlet_log": "Scharlakeboomstam",
 	"block.mubble.stripped_scarlet_log": "Gestripte scharlakeboomstam",
 	"block.mubble.scarlet_wood": "Scharlakehout",
-	"block.mubble.stripped_scarlet_wood": "Gestripte scharlakehout",
+	"block.mubble.stripped_scarlet_wood": "Gestript scharlakehout",
 	"block.mubble.scarlet_leaves": "Scharlakebladeren",
-	"//block.mubble.scarlet_leaves_carpet": "Scarlet Leaves Carpet",
+	"block.mubble.scarlet_leaves_carpet": "Scarlakebladeren tapijt",
 	"block.mubble.scarlet_pressure_plate": "Scharlakehouten drukplaat",
 	"block.mubble.scarlet_trapdoor": "Scharlakehouten valluik",
 	"block.mubble.scarlet_button": "Scharlakehouten knop",
@@ -454,9 +454,9 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 
-	"//block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
-	"//block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
-	"//block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
+	"block.mubble.potted_autumn_oak_sapling": "Gepotte herfsteikkiemplant",
+	"block.mubble.potted_pink_cherry_oak_sapling": "Gepotte rozekerseneikkiemplant",
+	"block.mubble.potted_white_cherry_oak_sapling": "Gepotte wittekerseneikkiemplant",
 	"block.mubble.potted_palm_sapling": "Gepotte palmkiemplant",
 	"block.mubble.potted_fire_flower": "Gepotte vuur bloem",
 	"block.mubble.potted_ice_flower": "Gepotte ijs bloem",
@@ -477,10 +477,10 @@
 	"block.mubble.potted_light_gray_mushroom": "Gepotte lichtgrijze paddenstoel",
 	"block.mubble.potted_gray_mushroom": "Gepotte grijze paddenstoel",
 	"block.mubble.potted_black_mushroom": "Gepotte zwarte paddenstoel",
-	"block.mubble.potted_scarlet_sapling": "Gepotte Scharlakekiemplant",
-	"block.mubble.potted_scarlet_mushroom": "Gepotte Scharlake paddenstoel",
-	"block.mubble.potted_scarlet_orchid": "Gepotte Scharlake orchidee",
-	"block.mubble.potted_potato_flower": "Gepotte Aardappelbloem",
+	"block.mubble.potted_scarlet_sapling": "Gepotte scharlakekiemplant",
+	"block.mubble.potted_scarlet_mushroom": "Gepotte scharlake paddenstoel",
+	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
+	"block.mubble.potted_potato_flower": "Gepotte aardappelbloem",
 
 
 
@@ -636,8 +636,8 @@
 
 	"comment": "BIOMES",
 	"biome.mubble.autumn_oak_forest": "Herfsteiken bos",
-	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
-	"//biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
+	"biome.mubble.pink_cherry_oak_forest": "Rozekerseneiken bos",
+	"biome.mubble.white_cherry_oak_forest": "Wittekerseneiken bos",
 	"biome.mubble.scarlet_forest": "Scharlake bos",
 
 
